[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/TestWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Game.gd" type="Script" id=2]

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="TestWorld" parent="." instance=ExtResource( 1 )]
pause_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -34.0
margin_right = 25.5
margin_bottom = -20.0
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -10.0
margin_right = 32.0
margin_bottom = 10.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="CanvasLayer/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 20.0
margin_right = 32.0
margin_bottom = 40.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 50.0
margin_right = 32.0
margin_bottom = 70.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/PauseMenu/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
